[gd_scene load_steps=5 format=2]

[ext_resource path="res://DynamicMusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Blob-Monsters-on-the-Loose.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Pixel-Drama.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Analog-Nostalgia.wav" type="AudioStream" id=4]

[node name="DynamicMusicPlayer" type="Node"]
script = ExtResource( 1 )

[node name="Combat1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="Combat2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="Idle1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"
[connection signal="finished" from="Combat1" to="." method="_on_Combat1_finished"]
[connection signal="finished" from="Combat2" to="." method="_on_Combat2_finished"]
[connection signal="finished" from="Idle1" to="." method="_on_Idle1_finished"]
